--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Android-cloud-2020</string>
+    <string name="author">GODART Corentin</string>
 
     <string name="dynamic_content">Hello %1$s %2$s - %3$d years old</string>
 
