--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,9 @@
 <resources>
-    <string name="app_name">Android-cloud-2020</string>
-    <string name="author">GODART Corentin</string>
-
-    <string name="dynamic_content">Hello %1$s %2$s - %3$d years old</string>
-
-    <plurals name="found_word">
-        <item quantity="zero">Found 0 contact</item>
-        <item quantity="one">Found 1 word</item>
-        <item quantity="other">Found 5 words</item>
-    </plurals>
-
-    <plurals name="dynamic_plurals">
-        <item quantity="zero">Plural and dynamic : %1$d word</item>
-        <item quantity="one">Plural and dynamic : %1$d word</item>
-        <item quantity="other">Plural and dynamic : Found %1$d words</item>
-    </plurals>
+    <string name="app_name" translatable="false">Android-cloud-2020</string>
+    <string name="author" translatable="false">GODART Corentin</string>
+    <string name="name">:</string>
+    <string name="gender">:</string>
+    <string name="culture">:</string>
+    <string name="birthDate">:</string>
+    <string name="deathDate">:</string>
 </resources>
